add: obrigatory terms tratament
